--- a/user/om_73/range rover/css/global.css
+++ b/user/om_73/range rover/css/global.css
@@ -336,6 +336,27 @@ body {
     transform: translateY(-10px);
     box-shadow: 3px 13px 2px rgba(0, 0, 0, 0.212);
 }
+.info-tab{
+    position: fixed;
+    bottom: 40px;
+    right: 40px;
+    width: 20px;
+    height: 20px;
+    background-color: #ffddabd8;
+    color: #554023;
+    border-radius: 16px;
+    text-align: center;
+    padding: 20px;
+    margin: 0 5px;
+    box-shadow: 3px 3px 2px rgba(0, 0, 0, 0.212);
+    transition: all 0.2s ease;
+}
+.info-tab:hover{
+    color: #554023;
+    transform: translateY(-10px);
+    box-shadow: 3px 13px 2px rgba(0, 0, 0, 0.212);
+    transition: all 0.2s ease
+}
 /* .explore {
     position: relative;
     display: inline-block;
@@ -609,6 +630,28 @@ body {
         background-color: #eebf78d7;
         transform: translateY(-10px);
         box-shadow: 3px 13px 2px rgba(0, 0, 0, 0.212);
+    }
+    .info-tab{
+        display: none;
+        position: fixed;
+        bottom: 40px;
+        right: 40px;
+        width: 20px;
+        height: 20px;
+        background-color: #ffddabd8;
+        color: #554023;
+        border-radius: 16px;
+        text-align: center;
+        padding: 20px;
+        margin: 0 5px;
+        box-shadow: 3px 3px 2px rgba(0, 0, 0, 0.212);
+        transition: all 0.2s ease;
+    }
+    .info-tab:hover{
+        color: #554023;
+        transform: translateY(-10px);
+        box-shadow: 3px 13px 2px rgba(0, 0, 0, 0.212);
+        transition: all 0.2s ease
     }
 
     #loading {
