--- a/user/om_73/range rover/css/global.css
+++ b/user/om_73/range rover/css/global.css
@@ -392,7 +392,7 @@ body {
 
 #loading {
     position: fixed;
-    display: none;
+    display: block;
     width: 100%;
     height: 100%;
     top: 0;
