--- a/user/vivek_78/global.css
+++ b/user/vivek_78/global.css
@@ -2,6 +2,29 @@ body{
     background-color: #fff;
     color: #000;
 }
+        .navbar{
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            background: #ffffff;
+            padding: 20px 0;
+        }
+        li{list-style: none;
+        display: inline-block;
+        }
+        .nav-link{
+            color: rgb(34, 34, 34);
+            background: #e4060600;
+            margin: 10px 5px;
+            padding: 15px 25px;
+            text-decoration: none;
+        }
+        .nav-link:hover{
+            color: #fff;
+            background: #4285f4;
+            transition: all 0.1s ease;
+        }
 .float-left{
     float: left;
     width: 40%;
