--- a/user/vivek_78/global.css
+++ b/user/vivek_78/global.css
@@ -41,9 +41,10 @@ body{
     display: inline-block;
     border: 0px rgb(255, 255, 255) solid;
     border-radius: 28px;
-    width: 23%;
+    width: 21.8%;
     height: 500px;
     margin: 1vh 0.6vw;
+    padding: 10px;
     overflow: hidden;
     cursor: pointer;
     box-shadow: 2px 2px 5px rgb(206, 206, 206);
@@ -95,17 +96,13 @@ section{
     height: 540px;
     border: 0px #000 solid;
     border-radius: 28px;
-    color: #fff;
-    background-color: #ea4335;
-    box-shadow: 2px 2px 5px rgba(36, 36, 36, 0.568);
-}
-.box-container:nth-child(9){
-    color: #fff;
-    background-color: #fbbc05;
+    color: #000;
+    background-color: #fff;
+    box-shadow: 0px 0px 0px rgba(36, 36, 36, 0.0);
 }
 .img{
     width: 100%;
-    border-radius: 28px;
+    border-radius: 16px;
 }
 .explore{
     border: 0px #000 solid;
