--- a/user/vivek_78/global.css
+++ b/user/vivek_78/global.css
@@ -18,6 +18,7 @@ body{
             background: #e4060600;
             margin: 10px 5px;
             padding: 15px 25px;
+            border-radius: 28px;
             text-decoration: none;
         }
         .nav-link:hover{
